# ai-test-copy-2

./: readme.md
app/: app.py  ignite.py  llm.py  main.py  memory_manager.py  pyproject.toml  text2image.py
app/chroma_db/: chroma.sqlite3
