[tool.poetry]
name = "ai-test"
version = "1.0"
description = "'An application for demonstrating your skills in AI'"
authors = ["Rockstar"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
openfabric-pysdk = "^0.3.0"
ollama = "^0.5.1"
chromadb = "^1.0.12"
streamlit = "^1.45.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[[tool.poetry.source]]
name = "node2"
url = "https://repo.node2.openfabric.network/index"
priority = "supplemental"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
